# adma_mentor

./: .gitignore  README.md  data.csv  navigation.py  pyproject.toml  requirements.txt  saved.csv  streamlit_app.py  users.json
.streamlit/: config.toml
config/: constant.py  utils.py
pages/: page1.py  page2.py  page3.py  page4.py  page5.py
